# dem2stl

./: .gitignore  Dockerfile  dem2stl.py  pyproject.toml
src/dem2stl/: dem2stl.py
