[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dem2stl"
authors = [
    { name = "Carlos Veiga Rodrigues", email = "cvrodrigues@gmail.com" },
    { name = "Filippo Gatti", email = "filippo.gatti@centralesupelec.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gdal",
    "pyproj",
    "utm"
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/dem2stl/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ['tests']

[project.optional-dependencies]
tests = [
    'coverage',
    'pytest',
    'pytest-cov',
]
dev = [
    'mypy',
    'ruff',
    'bandit',
    "pre-commit",
    "isort"
]

[project.scripts]
dem2stl = "dem2stl.dem2stl:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
#log_cli = 1

[tool.coverage.run]
omit = [
 ]

[tool.isort]
profile = "black"

[tool.ruff]
fix = false
extend-exclude = ["**/__pycache__/", "build", "*.egg-info"]
required-version = ">=0.3.3"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
ignore_missing_imports = true
disallow_untyped_decorators = false
